# django-pydantic

./: 404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  lint.yml  publish.yml
django_pydantic/: __init__.py  apps.py  middleware.py  request.py  response.py  schema.py
docs/: index.md
docs/en/: index.md
docs/en/advanced/: class-based-views.md  custom-extraction.md  index.md
docs/en/reference/: index.md  request-model.md
docs/en/tutorial/: first-steps.md  index.md  pydantic-features.md  request-data.md  request-schema.md  response-schema.md  url-params.md  validation.md
docs/ru/: index.md
docs/ru/advanced/: class-based-views.md  custom-extraction.md  index.md
docs/ru/reference/: index.md  request-model.md
docs/ru/tutorial/: first-steps.md  index.md  pydantic-features.md  request-data.md  request-schema.md  response-schema.md  url-params.md  validation.md
en/: index.html
en/advanced/: index.html
en/advanced/class-based-views/: index.html
en/advanced/custom-extraction/: index.html
en/reference/: index.html
en/reference/request-model/: index.html
en/tutorial/: index.html
en/tutorial/first-steps/: index.html
en/tutorial/pydantic-features/: index.html
en/tutorial/request-data/: index.html
en/tutorial/request-schema/: index.html
en/tutorial/response-schema/: index.html
en/tutorial/url-params/: index.html
en/tutorial/validation/: index.html
ru/: index.html
ru/advanced/: index.html
ru/advanced/class-based-views/: index.html
ru/advanced/custom-extraction/: index.html
ru/reference/: index.html
ru/reference/request-model/: index.html
ru/tutorial/: index.html
ru/tutorial/first-steps/: index.html
ru/tutorial/pydantic-features/: index.html
ru/tutorial/request-data/: index.html
ru/tutorial/request-schema/: index.html
ru/tutorial/response-schema/: index.html
ru/tutorial/url-params/: index.html
ru/tutorial/validation/: index.html
search/: search_index.json
stylesheets/: extra.css
test_app/: .env.example
test_app/config/: settings.py  urls.py
test_app/main/: schema.py  urls.py  views.py
