[project]
name = "django-pydantic-client"
version = "0.1.2"
description = "Instantiate Pydantic models directly from Django HttpRequest for request validation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "NEFORCEO", email = "n7for8572@gmail.com" },
]
keywords = ["django", "pydantic", "validation", "schema", "request"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "django>=4.2",
    "pydantic[email]>=2.0",
]

[project.urls]
Homepage = "https://github.com/NEFORCEO/django-pydantic"
Repository = "https://github.com/NEFORCEO/django-pydantic"
"Bug Tracker" = "https://github.com/NEFORCEO/django-pydantic/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_pydantic"]

[tool.hatch.build.targets.sdist]
include = ["django_pydantic/", "README.md", "LICENSE"]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.6",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "django-stubs>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "test_app.config.settings"
